# xtb-api-unofficial-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  debug_auth.py  pyproject.toml  test_live_auth.py  test_live_browser_auth.py
.github/workflows/: ci.yml  commit-lint.yml  release.yml  semantic-release.yml
docs/superpowers/plans/: 2026-04-10-publish-polish.md  2026-04-15-docs-refresh-v0.5.md  2026-04-15-v0.5-broker-adapter-support.md  2026-04-17-w1-typed-outcomes.md  2026-04-21-queued-orders.md
docs/superpowers/specs/: 2026-04-09-xtb-api-refactoring-design.md  2026-04-10-publish-polish-design.md  2026-04-15-docs-refresh-v0.5-design.md  2026-04-17-audit-and-roadmap-design.md  2026-04-21-demo-mode-design.md  2026-04-21-queued-orders-design.md
examples/: basic_usage.py  cancel_queued_order.py  grpc_trade.py  live_quotes.py
scripts/: validate_live.py
src/xtb_api/: __init__.py  __main__.py  client.py  config.py  exceptions.py  instruments.py  utils.py
src/xtb_api/auth/: __init__.py  auth_manager.py  browser_auth.py  cas_client.py  chrome_session.py
src/xtb_api/browser/: __init__.py  browser_client.py
src/xtb_api/grpc/: __init__.py  client.py  proto.py  types.py
src/xtb_api/types/: __init__.py  enums.py  instrument.py  trading.py  websocket.py
src/xtb_api/ws/: __init__.py  parsers.py  ws_client.py
tests/: conftest.py  test_ambiguous_outcome_error.py  test_auth.py  test_auth_manager.py  test_auth_session_source.py  test_browser_auth.py  test_browser_auth_chromium_missing.py  test_cancel_order.py  test_cas_cookies.py  test_cas_error_subclasses.py  test_client.py  test_client_fill_price.py  test_client_idempotent_retry.py  test_client_queued_detection.py  test_client_trade_outcome_mapping.py  test_client_volume_validation.py  test_config.py  test_doctor.py  test_exceptions.py  test_get_positions_push.py  test_grpc_client.py  test_instruments.py  test_parsers.py  test_proto.py  test_trade_outcome.py  test_trade_outcome_match.py  test_version.py  test_ws_client.py  test_ws_get_balance_race.py  test_ws_trade_result_shape.py
