[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xtb-api-python"
version = "0.1.0"
description = "Python port of unofficial XTB xStation5 API client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Łukasz" },
]
keywords = ["xtb", "xstation5", "trading", "websocket", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "websockets>=13.0",
    "pydantic>=2.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
totp = ["pyotp>=2.9.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xtb_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
packages = ["xtb_api"]
mypy_path = ["src"]
