[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xtb-api-python"
version = "0.3.0"
description = "Python port of unofficial XTB xStation5 API client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Łukasz Lis", email = "ll.lukasz.lis@gmail.com" },
]
keywords = ["xtb", "xstation5", "trading", "websocket", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/liskeee/xtb-api-python"
Repository = "https://github.com/liskeee/xtb-api-python"
Issues = "https://github.com/liskeee/xtb-api-python/issues"
Changelog = "https://github.com/liskeee/xtb-api-python/blob/master/CHANGELOG.md"

[project.scripts]
xtb-api = "xtb_api.__main__:main"

dependencies = [
    "websockets>=13.0",
    "pydantic>=2.5",
    "httpx>=0.27",
    "playwright>=1.40",
]

[project.optional-dependencies]
totp = ["pyotp>=2.9.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xtb_api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "reference-ts/",
    ".venv/",
    "docs/",
    ".github/",
    ".pytest_cache/",
    ".ruff_cache/",
    "uv.lock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
packages = ["xtb_api"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["pyotp", "pyotp.*"]
ignore_missing_imports = true
