[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xtb-api-python"
version = "0.5.1"
description = "Python port of unofficial XTB xStation5 API client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Łukasz Lis", email = "ll.lukasz.lis@gmail.com" },
]
keywords = ["xtb", "xstation5", "trading", "websocket", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "websockets>=13.0",
    "pydantic>=2.5",
    "httpx>=0.27",
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/liskeee/xtb-api-python"
Repository = "https://github.com/liskeee/xtb-api-python"
Issues = "https://github.com/liskeee/xtb-api-python/issues"
Changelog = "https://github.com/liskeee/xtb-api-python/blob/master/CHANGELOG.md"

[project.scripts]
xtb-api = "xtb_api.__main__:main"

[project.optional-dependencies]
totp = ["pyotp>=2.9.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xtb_api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "reference-ts/",
    ".venv/",
    "docs/",
    ".github/",
    ".pytest_cache/",
    ".ruff_cache/",
    "uv.lock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
packages = ["xtb_api"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["pyotp"]
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
commit_message = "chore(release): {version}\n\n[skip ci]"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "master"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "ci", "build", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
  "^chore\\(release\\):",
  "^chore: bump version",
]

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
